fixed layout issues site

--- a/site/src/app/app.component.css
+++ b/site/src/app/app.component.css
@@ -24,3 +24,7 @@
     padding-bottom: 1em;
     background-color: transparent;
 }
+
+.text-center {
+  text-align: center;
+}
