--- a/site/src/app/pages/home/home.component.css
+++ b/site/src/app/pages/home/home.component.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
 }
 
-.center-text {
+.text-center {
   text-align: center;
 }
 
